[gd_scene load_steps=2 format=2]

[ext_resource path="res://auto_line.gd" type="Script" id=1]

[node name="AutoLine" type="LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -694.0
margin_bottom = -524.0
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )

[node name="PopupMenu2" type="PopupMenu" parent="."]
anchor_bottom = 0.263
margin_left = 2.0
margin_top = 89.0
margin_right = 329.0
margin_bottom = 307.012

[connection signal="text_changed" from="." to="." method="_on_Control_text_changed"]
[connection signal="id_pressed" from="PopupMenu2" to="." method="_on_PopupMenu2_id_pressed"]
